# juegos_matematicos

./: Juegos matemáticos.7z  README.md  base_datos.xlsx  gameclasses.py  grupos.py  juegosmatematicos.py  poetry.toml  pyproject.toml  userScores.txt  usrclases.py  version_tk_01.py
