[tool.poetry]
name = "juegos_matematicos"
version = "0.1.0"
description = "Juegos matemáticos: pemdas, conversión a binarios, ecuaciones cuadráticas"
authors = ["Jlom-Chess <jlojeda48@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
pylint = "^2.14.4"
autopep8 = "^1.6.0"
yapf = "^0.32.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
